Fix "No Data" text alignment for PivotGrid and DataGrid (T575291) (#1980)
* Fix "No Data" text alignment for PivotGrid and DataGrid

* Fix after merge

--- a/styles/widgets/common/gridBase.less
+++ b/styles/widgets/common/gridBase.less
@@ -766,6 +766,9 @@
         position: absolute;
         top: 50%;
         left: 50%;
+        width: 100%;
+        text-align: center;
+        transform: translate(-50%, -50%);
     }
 
     .dx-@{widgetName}-bottom-load-panel {
