--- a/styles/widgets/common/pivotGrid.less
+++ b/styles/widgets/common/pivotGrid.less
@@ -25,6 +25,9 @@
     position: absolute;
     top: 50%;
     left: 50%;
+    width: 100%;
+    text-align: center;
+    transform: translate(-50%, -50%);
 }
 
 .dx-pivotgrid {
